# postfix-virtual-gsuite-sync

./: README.rst  pyproject.toml
postfix_virtual_gsuite_sync/: alias_updater.py  cli.py  postfix_virtual.py
